tests/samples/0104/error.txt
error[P0044]: invalid constant initialization expression
  --> 0104/code.ara:2:7
  |
2 | #[Baz(...BAZ)]
  |       ^^^^^^ invalid constant initialization expression

error[P0044]: invalid constant initialization expression
  --> 0104/code.ara:4:16
  |
4 |     Bar $bar = new Bar(...BAZ),
  |                ^^^^^^^^^^^^^^^ invalid constant initialization expression

error[P0044]: invalid constant initialization expression
  --> 0104/code.ara:7:7
  |
7 | #[Bar(...BAZ)]
  |       ^^^^^^ invalid constant initialization expression

error[P0044]: invalid constant initialization expression
  --> 0104/code.ara:9:16
  |
9 |     Bar $bar = new Bar(BAZ...),
  |                ^^^^^^^^^^^^^^^ invalid constant initialization expression

